Closed Bug 620034 Opened 15 years ago Closed 15 years ago

"ABORT: DOM wrapper's list length is out of sync" [@ mozilla::DOMSVGNumberList::Length]

Categories

(Core :: SVG, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- final+

People

(Reporter: jruderman, Assigned: jwatt)

References

Details

(Keywords: assertion, testcase)

Attachments

(3 files, 1 obsolete file)

No description provided.
###!!! ABORT: DOM wrapper's list length is out of sync: 'mItems.Length() == 0 || mItems.Length() == const_cast<DOMSVGNumberList*>(this)->InternalList().Length()', file /builds/slave/cen-osx64-dbg/build/content/svg/content/src/DOMSVGNumberList.h, line 107
Attached file stack trace
Blocks: 589439
blocking2.0: --- → final+
OS: Mac OS X → All
Hardware: x86 → All
Assignee: nobody → jwatt
Attached patch patch (obsolete) — Splinter Review
Attachment #498760 - Flags: review?(longsonr)
Attached patch patchSplinter Review
Same problem exists in SVGAnimatedLengthList.
Attachment #498761 - Flags: review?(longsonr)
Attachment #498760 - Attachment is obsolete: true
Attachment #498760 - Flags: review?(longsonr)
Comment on attachment 498761 [details] [diff] [review] patch Don't forget to check in the testcase as a crashtest when landing.
Attachment #498761 - Flags: review?(longsonr) → review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: