Bug 620034 - "ABORT: DOM wrapper's list length is out of sync" [@ mozilla::DOMSVGNumberList::Length]. r=longsonr, a=blocking.